--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
     "jose": "^6.0.10",
     "js-cookie": "^3.0.5",
@@ -37,6 +38,7 @@
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.2.0",
     "nodemailer": "^6.10.0",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
