--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jsqr": "^1.4.0",
     "libphonenumber-js": "^1.11.18",
     "lucide-react": "^0.474.0",
     "my-app": "file:",
@@ -57,6 +58,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.17.16",
     "@types/nodemailer": "^6.4.17",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
