--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -35,7 +36,7 @@
     "libphonenumber-js": "^1.11.18",
     "lucide-react": "^0.474.0",
     "my-app": "file:",
-    "next": "^15.1.6",
+    "next": "^15.3.1",
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.2.0",
     "nodemailer": "^6.10.0",
